# n8n-scraper

./: .dockerignore  .env.connection-info  .gitignore  ALL_324_FIELDS.md  BACKUP_GUIDE.md  CATEGORY-MAPPING-COMPLETE.md  COMPLETE_FIELD_LIST.md  COMPREHENSIVE-EXPANSION-VALIDATION-REPORT.md  COMPREHENSIVE-SCRAPING-EXPANSION-PLAN.md  CONTRIBUTING.md  CORRECTED-SCRAPING-PROMPT.md  CURSOR_TERMINAL_INSTRUCTIONS.md  DASHBOARD-COMMIT-SUMMARY.md  DASHBOARD-FIX-REPORT.md  DASHBOARD-FIX-SUMMARY.md  DATABASE-STATUS-REPORT.md  DATABASE-VIEWER-FINAL-STATUS.md  DEMO-RESULTS.md  DEV1-HANDOFF-DATABASE-VIEWER-FIX.md  DOCKER_DATABASE_GUIDE.md  DOCUMENTATION_SUMMARY.md  Dockerfile  ENHANCED-DASHBOARD-COMPLETE.md  ENHANCED_DATABASE_VIEWER_COMPLETE.md  ENHANCED_SCRAPERS_IMPLEMENTATION_SUMMARY.md  FINAL_MONITORING_PROMPT.md  FULL_SCRAPING_START_PROMPT.md  HOW_TO_RUN_DASHBOARD.md  INTUITIVE_MONITORING_GUIDE.md  JEST_TO_PYTEST_DASHBOARD_MIGRATION.md  L3_FULL_SCRAPING_MONITORING_PROMPT.md  LAYER-SUCCESS-FLAGS-FIXED.md  LAYER1-DB-GAP-ANALYSIS.md  LAYER1-VALIDATION-REPORT.md  LAYER1_5_MIGRATION_STATUS.md  LAYER1_5_QUICK_REFERENCE.md  LAYER1_CLEANUP_PLAN.md  LAYER1_SOLUTION_IMPLEMENTED.md  LAYER1_V2_DEPLOYMENT_PLAN.md  LAYER2-ENHANCED-COMPLETE-SUMMARY.md  (+136 more)
.checkpoints/: checkpoint_20251013_011951.json  checkpoint_20251013_012130.json  checkpoint_20251013_012327.json  checkpoint_20251013_013433.json  checkpoint_20251013_013608.json  checkpoint_20251013_013748.json  checkpoint_20251013_013945.json  checkpoint_20251013_014145.json  checkpoint_20251013_014421.json  checkpoint_20251013_014700.json
.coordination/: AGENT_SPAWN_READY.md  LAYER2-RESUME-MECHANISM-COMPLETE.md  README.md
backups/: n8n_scraper_backup_20251011_174958_stats.json  n8n_scraper_supabase_backup_20251016_121737_stats.json  pre_production_comprehensive_20251012_205410.sql
config/: cron-backup.sh
docker/: Dockerfile  docker-compose.yml
docs/: 100_PERCENT_PRODUCTION_READY.md  ARCHITECTURE_OVERVIEW.md  CPU-MANAGEMENT-GUIDE.md  CRITICAL_AND_PERFORMANCE_IMPROVEMENTS_COMPLETE.md  CROSS_CONTAINER_CONNECTION_SOLUTION.md  DATABASE-VIEWER-GUIDE.md  DATABASE_ARCHITECTURE_v1.0.md  DATABASE_CONNECTION_POOL.md  DATABASE_IMPROVEMENTS_SUMMARY.md  DATABASE_SCHEMA_IMPROVEMENTS.md  DATASET_SCHEMA_COMPLETE_v1.0.md  DB_CONNECTION_CLEANUP_COMPLETE.md  DB_CONNECTION_MANAGEMENT.md  DOCUMENTATION_INDEX_v2.1.1.md  DOCUMENTATION_INDEX_v2.1.md  DOCUMENT_INDEX.md  DYNAMIC_CONNECTION_MANAGEMENT.md  EMAIL_TO_RND_v2.1.1.md  ENHANCED_SCRAPERS_SUMMARY.md  EXECUTIVE_SUMMARY_v2.1.md  GLOBAL_CONNECTION_COORDINATION.md  JSON_EXTRACTOR.md  L3_IMPLEMENTATION_COMPLETE.md  L3_VIDEO_DISCOVERY_ANALYSIS.md  LAYER1_5_MIGRATION_COMPLETE_DOCUMENTATION.md  MONITORING-SYSTEM.md  PRE_PRODUCTION_CHECKLIST.md  PROJECT_PLAN_v1.0.md  PROJECT_PLAN_v2.1.md  README.md  REDIS_DEPLOYMENT_GUIDE.md  RESERVED_CONNECTIONS_IMPLEMENTED.md  RESERVED_CONNECTION_MANAGEMENT.md  RND_PACKAGE_SUMMARY_v2.1.1.md  SCHEMA_CONSOLIDATION_PLAN.md  SCRAPE-015-OPERATIONAL-GUIDE.md  SMART-FILTERING-TECHNICAL-DETAILS.md  SMART-FILTERING-USER-GUIDE.md  TRANSCRIPT_EXTRACTOR.md  UNIFIED_WORKFLOW_EXTRACTOR.md  (+9 more)
migrations/: add_category_tables.sql  add_layer1_5_fields.sql  add_layer2_enhanced_fields.sql  add_layer2_enhanced_fields_simple.sql  backup_before_schema_fixes_20251016_083623.sql  backup_before_schema_fixes_20251016_083812.sql  critical_schema_fixes.sql  extraction_snapshots.sql  fix_missing_fields.sql  layer3_comprehensive_schema.sql  node_context_schema.sql  performance_indexes_only.sql  status_system_schema.sql
scripts/: alert_system.py  analyze_main_content.py  analyze_page_structure.py  analyze_scrapable_data.py  analyze_scraper_improvements.py  analyze_transcript_failures.py  analyze_video_detection_7639.py  apply_critical_schema_fixes.py  apply_performance_indexes.py  apply_schema_fixes.py  assess_scraper_reliability.py  backfill_extraction_snapshots.py  backup.sh  backup_supabase.sh  batch_optimization_test.py  build_workflow_inventory.py  check_connection_status.py  check_database_schema.py  check_layer3_status.py  clean-start-dashboards.py  clean_l2_l3_data.py  cleanup_non_inventory_workflows.py  cleanup_test_workflows.py  complete_title_extraction.py  complete_workflow_extraction_scrape_015.py  comprehensive_db_test.py  comprehensive_layer3_test_results.json  comprehensive_prep_validation.py  comprehensive_video_search.py  corrected_e2e_test_scrape_015.py  create_comprehensive_schema.sql  dashboard-fresh.py  database-proxy.sh  db-init.sh  db-maintain.sh  db-monitor.sh  db-viewer.py  debug_dynamic_video.py  debug_failed_workflows.py  debug_iframe_content.py  (+203 more)
src/: index.js
tests/: conftest.py  debug_database_viewer.py  debug_workflow_detail.py  test_cards_final.py  test_categories_column.py  test_cumulative_status.py  (+17 more)
(+440 files in other folders)
